[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "queuectl"
version = "1.0.0"
description = "A CLI-based background job queue system with workers, retries, and DLQ."
authors = [
  { name = "Jaideep", email = "jaideepp15@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

# Runtime dependencies (standard library only here, so empty)
dependencies = []

# Optional: CLI entry point
[project.scripts]
queuectl = "queuectl.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["queuectl*"]
